software/ros2/log/build_2024-06-19_15-21-29/movement_controllers/stdout_stderr.log
running egg_info
writing ../../build/movement_controllers/movement_controllers.egg-info/PKG-INFO
writing dependency_links to ../../build/movement_controllers/movement_controllers.egg-info/dependency_links.txt
writing entry points to ../../build/movement_controllers/movement_controllers.egg-info/entry_points.txt
writing requirements to ../../build/movement_controllers/movement_controllers.egg-info/requires.txt
writing top-level names to ../../build/movement_controllers/movement_controllers.egg-info/top_level.txt
reading manifest file '../../build/movement_controllers/movement_controllers.egg-info/SOURCES.txt'
writing manifest file '../../build/movement_controllers/movement_controllers.egg-info/SOURCES.txt'
running build
running build_py
copying movement_controllers/Peripheral_Interface_Node.py -> /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/build/movement_controllers/build/lib/movement_controllers
copying movement_controllers/IK_Solver_Node.py -> /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/build/movement_controllers/build/lib/movement_controllers
copying movement_controllers/Trajectory_Controller_Node.py -> /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/build/movement_controllers/build/lib/movement_controllers
running install
running install_lib
copying /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/build/movement_controllers/build/lib/movement_controllers/Peripheral_Interface_Node.py -> /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers
copying /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/build/movement_controllers/build/lib/movement_controllers/IK_Solver_Node.py -> /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers
copying /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/build/movement_controllers/build/lib/movement_controllers/Trajectory_Controller_Node.py -> /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers
byte-compiling /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers/Peripheral_Interface_Node.py to Peripheral_Interface_Node.cpython-312.pyc
byte-compiling /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers/IK_Solver_Node.py to IK_Solver_Node.cpython-312.pyc
  File "/home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers/IK_Solver_Node.py", line 42
    msg.position =  #3 float array
                    ^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

byte-compiling /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers/Trajectory_Controller_Node.py to Trajectory_Controller_Node.cpython-312.pyc
running install_data
copying package.xml -> /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/share/movement_controllers
creating /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/share/movement_controllers/launch
running install_egg_info
removing '/home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers-0.0.1-py3.12.egg-info' (and everything under it)
Copying ../../build/movement_controllers/movement_controllers.egg-info to /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/python3.12/site-packages/movement_controllers-0.0.1-py3.12.egg-info
running install_scripts
Installing IK_Solver_Node script to /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/movement_controllers
Installing Peripheral_Interface_Node script to /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/movement_controllers
Installing Trajectory_Controller_Node script to /home/darudecookie/Documents/V2-Robot-Arm/software/ros2/install/movement_controllers/lib/movement_controllers
writing list of installed files to '/home/darudecookie/Documents/V2-Robot-Arm/software/ros2/build/movement_controllers/install.log'
